--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ __snapshots__
 build/Release
 build
 
+dist
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
