--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "package",
   "version": "1.0.0",
   "description": "demo app",
-  "main": "index.js",
+  "main": "''",
   "scripts": {
-    "dev": "webpack serve --mode development",
-    "build": "webpack --mode development"
+    "dev": "webpack serve --mode development --config webpack.config.js",
+    "build": "webpack --mode development --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
